# NCKU_lab_web_fullend_practice

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  start_app.bat
frontend/src/: App.js
frontend/src/pages/: Editpage.jsx  Homepage.jsx  Loginpage.jsx  Registerpage.jsx  Userdetails.jsx  index.js
frontend/src/styles/: _edit.scss  _home.scss  _login.scss  _register.scss  _user.scss  style.css  style.css.map  style.scss
helpers/: insertdata.py
migrations/: env.py
migrations/versions/: 069391e30f5d_my_first_migration.py
models/: user.py
